# aoc

./: .gitignore  README.md
1/: 1.py
10/: 10.py
12/: common.py
13/: 13.1.py  common.py
14/: 14.py
18/: 18.py
20/: 20.py
2018/1/: 1.py
2018/2/: 2.py
2018/3/: 3.py
2018/7/: 7.py
2019/1/: 1.py
2019/2/: 2.py
2021/: 10.py
2022/1/: 1.c
2022/10/: common.py
2022/11/: 11.1.py  11.2.py  common.py
2022/12/: 12.py
2022/13/: 13.2.py
2022/14/: common.py
2022/15/: 15.py  common.py
2022/16/: 16.py  common.py
2022/2/: 2.1.py  2.2.py
2022/3/: 3.2.py
2022/5/: 5.1.py  5.2.py  common.py
2022/6/: 6.c  6.py
2022/7/: 7.py  common.py
2022/8/: 8.py
2022/9/: 9.py
2023/: Cargo.toml
2024/3/: 3.py
2024/6/: 6.py
2024/7/: 7.py
2024/python/: 1.py  10.py  11.py  12.py  13.py  14.py  17.py  2.py  22.py  3.py  3_regex.py  4.py  5.py  6.py  7.py  8.py  9.py
2024/python/1/: 1.py
2024/python/3/: 3_regex.py
2024/python/4/: 4.py
2024/python/5/: 5.py
2024/python/8/: 8.py
2024/rust/: Cargo.toml
3/: 3.1.py  common.py
4/: 4.py
5/: common.py
6/: 6.c
8/: common.py
9/: common.py
